fixed the issues based on PR review comments. The reloading collectd still not finished